# genco

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl
.github/workflows/: ci.yml  rust.yml  weekly.yml
examples/: c.rs  csharp.rs  dart.rs  go.rs  java.rs  java_string.rs  js.rs  kotlin.rs  nix.rs  python.rs  rust.rs
genco-derive/: Cargo.toml
genco-derive/src/: lib.rs
genco-macros/: Cargo.toml  README.md  build.rs
genco-macros/src/: ast.rs  cursor.rs  encoder.rs  fake.rs  item_buffer.rs  lib.rs  quote.rs  quote_fn.rs  quote_in.rs  quote_in_parser.rs  quote_parser.rs  requirements.rs  static_buffer.rs  string_parser.rs  token.rs  whitespace_emitter.rs
src/: con.rs  con_.rs  config.rs  cons.rs  contained.rs  custom.rs  element.rs  erased_element.rs  ext.rs  format_tokens.rs  formatter.rs  go.rs  into_tokens.rs  item.rs  item_str.rs  java.rs  js.rs  lib.rs  macros.rs  prelude.rs  python.rs  quoted.rs  register_tokens.rs  rust.rs  swift.rs  tokens.rs  write_tokens.rs
src/csharp/: argument.rs  class.rs  constructor.rs  enum_.rs  field.rs  interface.rs  method.rs  mod.rs  modifier.rs  utils.rs
src/dart/: mod.rs  modifier.rs  utils.rs
src/ext/: display.rs  mod.rs  quoted.rs  register.rs  tokenize_iter.rs
src/fmt/: config.rs  cursor.rs  fmt_writer.rs  formatter.rs  from_fn.rs  io_writer.rs  mod.rs  vec_writer.rs
src/formatter/: config.rs  fmt_writer.rs  io_writer.rs  mod.rs  vec_writer.rs
src/java/: argument.rs  class.rs  constructor.rs  enum_.rs  field.rs  interface.rs  method.rs  mod.rs  modifier.rs  utils.rs
src/lang/: c.rs  go.rs  js.rs  mod.rs  nix.rs  python.rs  rust.rs  swift.rs
src/lang/csharp/: block_comment.rs  comment.rs  mod.rs  modifier.rs  utils.rs
src/lang/dart/: doc_comment.rs  mod.rs  modifier.rs  utils.rs
src/lang/java/: block_comment.rs  mod.rs  modifier.rs  utils.rs
src/lang/kotlin/: mod.rs
src/tokens/: cursor.rs  display.rs  format_into.rs  from_fn.rs  internal.rs  item.rs  item_str.rs  mod.rs  quoted.rs  register.rs  register_tokens.rs  static_literal.rs  tokens.rs
tests/: test_indentation_rules.rs  test_option.rs  test_quote.rs  test_quote_in.rs  test_quote_simple_expression.rs  test_register.rs  test_string.rs  test_token_gen.rs
