[package]
name = "genco"
version = "0.14.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/udoprog/genco"
homepage = "https://github.com/udoprog/genco"
documentation = "https://docs.rs/genco"
keywords = ["template", "code-generation"]
categories = ["template-engine"]
description = """
A whitespace-aware quasiquoter for beautiful code generation.
"""

[dependencies]
genco-macros = {path = "genco-macros", version = "0.14.2"}
relative-path = "1.2.0"
smallvec = "1.4.0"

[dev-dependencies]
anyhow = "1.0.31"
rand = "0.7.3"
