[package]
name = "genco-derive"
version = "0.5.0-alpha.5"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/udoprog/genco"
homepage = "https://github.com/udoprog/genco"
documentation = "https://docs.rs/genco"
description = """
Quote macro for the even simpler code generation for Rust.
"""

[dependencies]
syn = { version = "1.0.18", features = ["full", "visit-mut"] }
quote = "1.0.3"
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }

[dev-dependencies]
genco = { path = "..", version = "=0.5.0-alpha.5" }

[lib]
proc-macro = true