[package]
name = "genco-macros"
version = "0.17.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = """
A whitespace-aware quasiquoter for beautiful code generation.
"""
documentation = "https://docs.rs/genco"
readme = "README.md"
homepage = "https://github.com/udoprog/genco"
repository = "https://github.com/udoprog/genco"
license = "MIT/Apache-2.0"
keywords = ["template", "code-generation"]
categories = ["template-engine"]

[dependencies]
syn = { version = "1.0.31", features = ["full"] }
q = {package = "quote", version = "1.0.3"}
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }

[dev-dependencies]
genco = { path = "..", version = "0.17.2" }

[lib]
proc-macro = true
